[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/menu/main_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/audio/8_bit_ice_cave_lofi.mp3" type="AudioStream" id=2]
[ext_resource path="res://scenes/main.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/end.png" type="Texture" id=4]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "play_end"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2.1, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Title" parent="." instance=ExtResource( 1 )]

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )
volume_db = -13.569
autoplay = true

[node name="EndCutscene" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false
vframes = 4

[node name="EndCutscenePlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../EndCutscene")
anims/RESET = SubResource( 3 )
anims/play_end = SubResource( 4 )

[connection signal="starting" from="Title" to="." method="_on_Game_starting"]
